Migrate Fabric 1.21.1 to stable Banira integration